tests/NormalTests/paczka1/small_fuzzy/76839292.err
Error in line 7: NRM A810 508,4
Error in line 1: jQxNmDg8AUU A374 82,1
Error in line 8: NRM S51 37,9
